--- a/README
+++ b/README
@@ -19,7 +19,7 @@ resp as input, and is responsible for grabbing the pieces needed from that, and 
 
 MIT license
 ------------------------------
-Copyright (C) <year> <copyright holders>
+Copyright (C) 2012 Nikolaj Kaare Nørskov
 
 Permission is hereby granted, free of charge, to any person obtaining a copy of
 this software and associated documentation files (the "Software"), to deal in
